Feature arrow (#36)
* First implementation of arrow launcher

* Merge changes

* Setup for melee weapons

* Add MeleeWeaponRegistry

* Setup for new DamageEvent and DamageModifier system

* Added weapon creation logic for melee weapons in WeaponCreator

* Included display item template in MeleeWeaponFactory

* Add GamePlayer methode getAttackStrength

* Add DefaultMeleeWeaponRegistry tests

* Extra getters

* Add melee weapon state to player state storage

* Fixed event handling being called twice

* Temp setup for EventDamageAdapter

* Added a PotionEffectReceiver interface for handling item effects using potion effects

* Gave OpenModeEntity an extension to PotionEffectReceiver

* Removed getEntity from GameEntity

* Removed Identifiable from GameEntity

* Added a provider router for EventDamageAdapter

* Renamed LivingEntityRegistry to MobRegistry

* Remove event damage for melee attacks

* Added a generic HitboxProvider

* Changed ShowHitboxesTool to use the new HitboxProvider

* Added HitboxProvider for player

* Added new HitboxProvider to open mode entity

* Converted Slime hitbox provider to new variant

* Converted Villager hitbox provider to new variant

* Converted Enderman hitbox provider to new variant

* Converted Ageable hitbox provider to new variant

* Renamed HitboxProviderNew back to HitboxProvider

* Setup for new deployment method

* Converted Deployment impls to use new method signature

* Removed deployment performance check

* Converted ThrowDeploymentObject and PlaceDeploymentObject into GameEntity

* Removed isReleased checks for deployment objects and effect sources

* Added a RemovableItemEffectSource as an extension to ItemEffectSource

* Move ItemEffectSource to source package

* Removed old handleDeployment method

* Removed isDeployed check from DeploymentObject

* cleanup

* Replaced the getCooldown method on DeploymentObject

* Added a DamageTarget for preparation of the new damage system

* Added an isPhysical check to deployment o