@@ -1,13 +1,16 @@
 package nl.matsgemmeke.battlegrounds.item.trigger.enemy;
 
 import nl.matsgemmeke.battlegrounds.entity.GameEntity;
-import nl.matsgemmeke.battlegrounds.game.component.TargetFinder;
+import nl.matsgemmeke.battlegrounds.game.component.targeting.TargetFinder;
+import nl.matsgemmeke.battlegrounds.item.actor.Actor;
 import nl.matsgemmeke.battlegrounds.item.trigger.TriggerContext;
-import nl.matsgemmeke.battlegrounds.item.trigger.TriggerTarget;
+import nl.matsgemmeke.battlegrounds.item.trigger.result.TriggerResult;
 import org.bukkit.Location;
-import org.bukkit.entity.Entity;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
 import java.util.List;
@@ -16,66 +19,58 @@ import java.util.UUID;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
-public class EnemyProximityTriggerTest {
+@ExtendWith(MockitoExtension.class)
+class EnemyProximityTriggerTest {
 
+    private static final UUID SOURCE_ID = UUID.randomUUID();
     private static final double CHECKING_RANGE = 2.5;
 
-    private Entity entity;
+    @Mock
+    private Actor actor;
+    @Mock
     private TargetFinder targetFinder;
-    private TriggerContext context;
-    private TriggerTarget target;
+    @InjectMocks
+    private EnemyProximityTrigger trigger;
 
-    @BeforeEach
-    public void setUp() {
-        entity = mock(Entity.class);
-        targetFinder = mock(TargetFinder.class);
-        target = mock(TriggerTarget.class);
+    @Test
+    void checkReturnsTriggerResultThatDoesNotActivateWhenActorDoesNotExist() {
+        TriggerContext triggerContext = new TriggerContext(SOURCE_ID, actor);
 
-        context = new TriggerContext(entity, target);
+        when(actor.exists()).thenReturn(false);
+
+        trigger.setCheckingRange(CHECKING_RANGE);
+        TriggerResult triggerResult = trigger.check(triggerContext);
+
+        assertThat(triggerResult.activates()).isFalse();
     }
 
     @Test
-    public void activatesReturnsFalseWhenTriggerTargetDoesNotExist() {
-        when(target.exists()).thenReturn(false);
+    void checkReturnsTriggerResultThatDoesNotActivateWhenThereAreNoNearbyEnemyTargets() {
+        Location actorLocation = new Location(null, 1, 1, 1);
+        TriggerContext triggerContext = new TriggerContext(SOURCE_ID, actor);
 
-        EnemyProximityTrigger trigger = new EnemyProximityTrigger(targetFinder);
+        when(actor.exists()).thenReturn(true);
+        when(actor.getLocation()).thenReturn(actorLocation);
+        when(targetFinder.findEnemyTargets(SOURCE_ID, actorLocation, CHECKING_RANGE)).thenReturn(Collections.emptyList());
+
         trigger.setCheckingRange(CHECKING_RANGE);
-        boolean activates = trigger.activates(context);
+        TriggerResult triggerResult = trigger.check(triggerContext);
 
-        assertThat(activates).isFalse();
+        assertThat(triggerResult.activates()).isFalse();
     }
 
     @Test
-    public void activatesReturnsFalseWhenThereAreNoNearbyEnemyTargets() {
-        Location targetLocation = new Location(null, 1, 1, 1);
-        UUID entityId = UUID.randomUUID();
+    void checkReturnsTriggerResultThatActivatesWhenThereAreNearbyEnemyTargets() {
+        Location actorLocation = new Location(null, 1, 1, 1);
+        TriggerContext triggerContext = new TriggerContext(SOURCE_ID, actor);
 
-        when(entity.getUniqueId()).thenReturn(entityId);
-        when(target.exists()).thenReturn(true);
-        when(target.getLocation()).thenReturn(targetLocation);
-        when(targetFinder.findEnemyTargets(entityId, targetLocation, CHECKING_RANGE)).thenReturn(Collections.emptyList());
+        when(actor.exists()).thenReturn(true);
+        when(actor.getLocation()).thenReturn(actorLocation);
+        when(targetFinder.findEnemyTargets(SOURCE_ID, actorLocation, CHECKING_RANGE)).thenReturn(List.of(mock(GameEntity.class)));
 
-        EnemyProximityTrigger trigger = new EnemyProximityTrigger(targetFinder);
         trigger.setCheckingRange(CHECKING_RANGE);
-        boolean activates = trigger.activates(context);
+        TriggerResult triggerResult = trigger.check(triggerContext);
 
-        assertThat(activates).isFalse();
-    }
-
-    @Test
-    public void activatesReturnsTrueWhenThereAreNearbyEnemyTargets() {
-        Location targetLocation = new Location(null, 1, 1, 1);
-        UUID entityId = UUID.randomUUID();
-
-        when(entity.getUniqueId()).thenReturn(entityId);
-        when(target.exists()).thenReturn(true);
-        when(target.getLocation()).thenReturn(targetLocation);
-        when(targetFinder.findEnemyTargets(entityId, targetLocation, CHECKING_RANGE)).thenReturn(List.of(mock(GameEntity.class)));
-
-        EnemyProximityTrigger trigger = new EnemyProximityTrigger(targetFinder);
-        trigger.setCheckingRange(CHECKING_RANGE);
-        boolean activates = trigger.activates(context);
-
-        assertThat(activates).isTrue();
+        assertThat(triggerResult.activates()).isTrue();
     }
 }
